# rc5_receiver

./: .gitignore  README.md  sdkconfig  sdkconfig.defaults
.cache/clangd/index/: hello_world_main.c.6A3850119E248AD3.idx
components/rc5_receiver/: CMakeLists.txt  Kconfig  README.md  rc5_receiver.c  rc5_receiver.h
main/: CMakeLists.txt  hello_world_main.c  rc5_receiver.h
